# snap-poc

./: .gitignore  1.html  Makefile  README.md  blog.cabal  blog.sublime-project  blog.sublime-workspace  poc.md  run.sh  snap-poc.cabal  snap.md
data/: products.js  tags.js
resources/static/: default.css
resources/static/css/: main.css
resources/static/resources/css/: default.css
resources/templates/: book  book-form  checkout.tpl  default.tpl  echo.tpl  home.tpl  index.tpl  login.tpl  page-footer.tpl  page-head.tpl  page-nav.tpl  page.tpl  product.tpl  signup.tpl  wrap.tpl
sandbox/: 0-poc.md  test.hs
snaplets/heist/templates/: book-form.tpl  book.tpl  container-app.tpl  fluid.tpl  hero.tpl  home.tpl  login.tpl  page-bottom-js.tpl  page-footer.tpl  page-head.tpl  page-nav.tpl  page.tpl
src/: Application.hs  DBOperation.hs  Handlers.hs  Main.hs  Models.hs  Site.hs  Splices.hs
src/Controllers/: Book.hs  Handlers.hs  Home.hs  Login.hs  Routes.hs  Site.hs
src/Models/: Common.hs  DBOperation.hs  Models.hs  Order.hs  Product.hs  Tag.hs
src/Views/: BookForm.hs  CommonSplices.hs  MarkdownSplices.hs  NavSplices.hs
test/: test-md.hs
