Name:                poc-product
Version:             0.2.0
Synopsis:            snap-poc
Description:         A blog application for snap framework poc
License:             AllRightsReserved
Author:              Haisheng Wu, Garriot Zhang
Maintainer:          freizl@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable snap-poc
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.10,
    data-lens                 >= 2.0.1 && < 2.1,
    data-lens-template        >= 2.1   && < 2.2,
    digestive-functors        >= 0.3   && < 0.4,
    digestive-functors-heist  >= 0.3   && < 0.4,
    digestive-functors-snap   >= 0.3   && < 0.4,
    heist                     >= 0.8   && < 0.9,
    mongoDB                   >= 1.2   && < 2.0,
    mtl                       >= 2     && < 3,
    snap                      >= 0.8   && < 0.9,
    snap-core                 >= 0.8   && < 0.9,
    snap-server               >= 0.8   && < 0.9,
    snaplet-mongoDB           >= 0.2.1 && < 0.3,
    text                      >= 0.11  && < 0.12,
    time                      >= 1.1   && < 1.5,
    xmlhtml == 0.1.*

  if flag(development)
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

